--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -5,7 +5,7 @@
   border-radius: 4px;
   box-shadow: 0px 0 8px rgba(0, 0, 0, 0.15);
   opacity: 1;
-  min-width: 500px;
+  min-width: 450px;
   max-width: 70vw;
   min-height: 350px;
   max-height: 90vh;
@@ -66,6 +66,8 @@
   flex-direction: column;
   justify-content: stretch;
   height: 100%;
+  width: 100%;
+  box-sizing: border-box;
 
   & > div {
     padding-right: 15px;
@@ -101,13 +103,13 @@
     align-items: flex-start;
     justify-content: space-between;
     padding-bottom: 15px;
+    box-sizing: border-box;
 
     .filter-locking-close-btn {
       border: none;
       margin: 0;
       padding: 0;
       font-size: 20px;
-      margin-right: 15px;
     }
 
     .filter-locking-saving-indicator {
