--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -81,7 +81,7 @@
   padding: 5px 0;
   max-height: 300px;
   min-width: 150px;
-  overflow-y: auto;
+  overflow-y: hidden;
 
   .axis-select-option.active {
     background: var(--react-autoql-hover-color);
