--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -15,6 +15,7 @@
     margin: 50px auto;
     padding: 0 40px;
     font-size: 15px;
+    flex: 1;
 
     .intro-message-list-container {
       display: flex;
