--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -16,7 +16,6 @@
 
   .data-preview-scroll-container,
   .custom-scrollbar-view {
-    scroll-behavior: smooth !important;
     width: 100%;
     height: 100%;
     white-space: nowrap;
@@ -56,6 +55,7 @@
     }
 
     table {
+      min-width: 100%;
       table-layout: fixed;
       border-collapse: collapse;
     }
