--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -1,17 +1,41 @@
 .filter-lock-menu {
   z-index: 99999 !important;
-  transition: opacity 0.1s ease 0s !important;
-  border: 1px solid #ababab52;
-  border-radius: 4px;
-  box-shadow: 0px 0 8px rgba(0, 0, 0, 0.15);
-  opacity: 1;
+  top: -4px !important;
   min-width: 450px;
   max-width: 95vw;
   min-height: 0px;
   max-height: 95vh;
   height: 350px;
-  background: var(--react-autoql-background-color-primary);
-  color: var(--react-autoql-text-color-primary);
+  padding: 10px;
+
+  .filter-lock-menu-content-container {
+    background: var(--react-autoql-background-color-primary);
+    color: var(--react-autoql-text-color-primary);
+    box-shadow: 0px 0 8px rgba(0, 0, 0, 0.15);
+    transition: opacity 0.1s ease 0s !important;
+    border: 1px solid #ababab52;
+    padding: 0 !important;
+    border-radius: 4px;
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+  }
+
+  .filter-lock-menu-popover-arrow {
+    border-bottom: 10px solid var(--react-autoql-border-color) !important;
+    top: 1px !important;
+    opacity: 1;
+
+    &::after {
+      content: '';
+      position: absolute;
+      border-left: 9px solid transparent;
+      border-right: 9px solid transparent;
+      border-bottom: 9px solid var(--react-autoql-background-color-primary);
+      top: 1px;
+      left: -9px;
+    }
+  }
 
   .filter-lock-toast-container {
     top: 0;
