fix table height when sorting with api

--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -1,7 +1,6 @@
 .react-autoql-table-container {
   flex: 1;
-  max-width: 100%;
-  width: 100%;
+  width: 100% !important;
   background-color: inherit;
   position: relative;
   display: flex;
