--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -14,6 +14,14 @@
     flex: 0 0 auto !important;
   }
 
+  .data-preview-error-message {
+    white-space: initial;
+    text-align: center;
+    font-size: 13px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
   .data-preview-scroll-container,
   .custom-scrollbar-view {
     width: 100%;
