fix: data preview only showing 3 rows

--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -66,6 +66,7 @@
       min-width: 100%;
       table-layout: fixed;
       border-collapse: collapse;
+      height: 175px;
     }
     thead {
       th {
