fix: change cursor for data preview column headers

--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -85,10 +85,9 @@
         background: var(--react-autoql-background-color-secondary);
         box-shadow: inset 0 -2px 0 var(--react-autoql-border-color);
         transition: color 0.2s ease;
-        cursor: pointer;
-        // &:hover {
         color: var(--react-autoql-accent-color);
-        // }
+        cursor: default;
+
         .data-preview-col-header {
           height: 100%;
           display: flex;
