--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -517,3 +517,16 @@
 .dashboard-tile-response-container .dashboard-tile-split-pane-container {
   background: inherit;
 }
+
+.auto-zoom-vertical {
+  display: flex;
+  position: absolute;
+  align-items:flex-end;
+  justify-content: flex-end;
+  transition: opacity 0.3s ease, color 0.3s ease;
+  width: 100%;
+  top: 20px;
+  right: -10px;
+  z-index: 3;
+  padding: 10px;
+}
