--- a/src/components/DataExplorer/DataExplorerInput.scss
+++ b/src/components/DataExplorer/DataExplorerInput.scss
@@ -4,10 +4,7 @@
   margin: 10px;
   margin-bottom: 0;
 
-  &.no-suggestions
-    .react-autosuggest__suggestions-container--open
-    .react-autosuggest__section-container:last-child
-    ul {
+  &.no-suggestions .react-autosuggest__suggestions-container--open .react-autosuggest__section-container:last-child ul {
     pointer-events: none;
     visibility: hidden;
     background: transparent !important;
@@ -49,7 +46,7 @@
     overflow: hidden;
     margin-top: 3px;
     border: 1px solid var(--react-autoql-border-color);
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 5px 1px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
     background-color: var(--react-autoql-background-color-secondary);
     color: var(--react-autoql-text-color-primary);
     box-sizing: content-box;
