--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -24,7 +24,7 @@
   height: 60px;
   background: var(--react-autoql-accent-color);
   color: var(--react-autoql-text-color-accent);
-  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 12px 1px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
   flex: 0 0 auto;
   z-index: 1;
 }
@@ -307,7 +307,7 @@
   z-index: 99999;
   border: 1px solid #ababab52;
   border-radius: 4px;
-  box-shadow: 0px 0 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0 8px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
   transition: opacity 0.2s ease 0s !important;
   opacity: 1 !important;
   overflow: hidden !important;
@@ -391,7 +391,7 @@
 
 /* Container holding the tabs */
 .page-switcher-container {
-  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
+  box-shadow: -2px 0 8px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
   overflow: hidden;
   box-sizing: border-box;
   display: flex;
@@ -410,9 +410,8 @@
     transform: translate(0, 0);
     cursor: pointer;
 
-    transition-property: background, color, transform, line-height, height,
-      width, margin-right, margin-top, margin-left, margin-bottom, z-index,
-      opacity;
+    transition-property: background, color, transform, line-height, height, width, margin-right, margin-top, margin-left,
+      margin-bottom, z-index, opacity;
     transition-duration: 0.2s;
 
     &.react-autoql-explore-queries span.react-autoql-icon svg {
@@ -435,7 +434,7 @@
     flex-direction: column;
 
     .tab {
-      box-shadow: inset -18px 0px 8px -10px rgba(0, 0, 0, 0.2);
+      box-shadow: inset -18px 0px 8px -10px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
     }
   }
 
@@ -449,7 +448,7 @@
     flex-direction: column;
 
     .tab {
-      box-shadow: inset 18px 0px 8px -10px rgba(0, 0, 0, 0.2);
+      box-shadow: inset 18px 0px 8px -10px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
     }
   }
 
@@ -463,7 +462,7 @@
     height: 40px;
 
     .tab {
-      box-shadow: inset 0px 12px 8px -10px rgba(0, 0, 0, 0.2);
+      box-shadow: inset 0px 12px 8px -10px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
     }
   }
 
@@ -477,7 +476,7 @@
     height: 40px;
 
     .tab {
-      box-shadow: inset 0px -17px 8px -10px rgba(0, 0, 0, 0.2);
+      box-shadow: inset 0px -17px 8px -10px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
     }
   }
 }
@@ -516,7 +515,7 @@
 .page-switcher-container .tab.active {
   background: var(--react-autoql-background-color-primary);
   color: var(--react-autoql-accent-color);
-  box-shadow: -2px 0px 8px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: -2px 0px 8px 2px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
   font-weight: bold;
   position: relative;
   z-index: 2;
