--- a/src/components/QueryInput/QueryInput.scss
+++ b/src/components/QueryInput/QueryInput.scss
@@ -32,7 +32,7 @@
   background: rgba(0, 0, 0, 0.03);
 }
 .react-autoql-chatbar-input:not(:disabled):hover {
-  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 5px 1px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
 }
 .react-autoql-chatbar-input::placeholder {
   /* Default color outside of data messenger */
@@ -70,21 +70,19 @@
   font-weight: normal;
   z-index: 2;
   overflow: hidden;
-  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 5px 1px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
 
   /* Default styles outside of data messenger */
   background-color: var(--react-autoql-background-color-secondary);
   color: var(--react-autoql-text-color-primary);
 }
 
-.react-autoql-bar-container.autosuggest-top
-  .react-autosuggest__suggestions-container--open {
+.react-autoql-bar-container.autosuggest-top .react-autosuggest__suggestions-container--open {
   top: unset;
   bottom: 45px;
 }
 
-.react-autoql-bar-container.autosuggest-bottom
-  .react-autosuggest__suggestions-container--open {
+.react-autoql-bar-container.autosuggest-bottom .react-autosuggest__suggestions-container--open {
   top: 45px;
   bottom: unset;
 }
