--- a/src/components/QueryInputWithValidation/QueryInputWithValidation.scss
+++ b/src/components/QueryInputWithValidation/QueryInputWithValidation.scss
@@ -33,7 +33,7 @@
   }
   &:not(:disabled):hover,
   &:not(:disabled):focus {
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 5px 1px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
   }
 }
 
