--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -176,7 +176,7 @@
   cursor: pointer;
   outline: none !important;
   transition: all 0.2s ease;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 0px;
+  box-shadow: var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15)) 0px 1px 0px;
 }
 .react-autoql-query-validation-execute-btn:hover {
   border-color: #28a8e0;
