--- a/src/components/SpeechToTextButton/SpeechToTextButton.scss
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.scss
@@ -19,7 +19,7 @@
   flex-grow: 0;
 }
 .chat-voice-record-button:hover {
-  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 4px 1px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
 }
 .chat-voice-record-button.listening {
   background: #ff471a;
