fix: info icon color in data alerts modal

--- a/src/components/Notifications/DataAlertModal/DataAlertModal.scss
+++ b/src/components/Notifications/DataAlertModal/DataAlertModal.scss
@@ -32,5 +32,5 @@
 }
 
 .react-autoql-data-alert-query-name-tooltip-icon {
-  color: var(--react-autoql-info-color);
+  color: var(--react-autoql-info-color) !important;
 }
