--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -189,7 +189,7 @@
   }
 
   .react-autoql-response-content-container {
-    padding: 7px;
+    padding: 7px 12px 20px 18px;
     align-items: center;
   }
 }
