--- a/src/components/OptionsToolbar/OptionsToolbar.scss
+++ b/src/components/OptionsToolbar/OptionsToolbar.scss
@@ -6,6 +6,7 @@
   line-height: 28px;
   background: var(--react-autoql-background-color-secondary);
   border: 1px solid var(--react-autoql-border-color);
+  box-shadow: 0px 2px 3px -2px var(--react-autoql-box-shadow-color);
 
   &.vertical .react-autoql-toolbar-btn {
     display: block;
