--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -133,8 +133,9 @@
   }
 
   &.infinite .tabulator-col.DATE_STRING .tabulator-header-filter,
-  &.infinite .tabulator-col.DATE .tabulator-header-filter {
-    display: none;
+  &.infinite .tabulator-col.DATE .tabulator-header-filter,
+  &.infinite .tabulator-col.DRILLDOWN .tabulator-header-filter {
+    display: none !important;
   }
 
   &.limited .tabulator-col .tabulator-header-filter,
