refactor: 💡 change to a clearer class name

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -140,7 +140,11 @@
 
     .react-autoql-response-content-container.table .query-output-footer {
       min-height: 33px;
+      &.top{
+        min-height: unset;
+      }
     }
+    
   }
 
   .dashboard-tile-response-wrapper.editing {
