--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -121,9 +121,8 @@
     line-height: 18px;
   }
 }
-.query-output-footer-top {
+.query-output-footer{
   display: flex;
-  justify-content: center;
   align-items: flex-end;
   max-height: 150px;
   width: 100%;
@@ -132,19 +131,14 @@
   &.no-margin {
     margin: 0;
   }
-}
-.query-output-footer-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  max-height: 150px;
-  width: 100%;
-  margin-top: 10px;
-
-  &.no-margin {
-    margin: 0;
+  &.top{
+    justify-content: center;
+  }
+  &.bottom{
+    justify-content:space-between
   }
 }
+
 .query-output-table-row-count{
   padding-top: 10px;
 }
